--- a/2.3.1-Callbacks入门-原理分析/demo.html
+++ b/2.3.1-Callbacks入门-原理分析/demo.html
@@ -35,6 +35,7 @@
 
         cb.add(fn2)
 
+        document.addEventListener('DOMContentLoaded',()=>{console.log('DOMContentLoaded 1')})
 
 
     </script>
